tests/invalid/invalid-025.inox
Module Invalid025

MissingReturn() Integer :
    PutLn("missing")
;

Main() :
;
